style.css
:root {
  --blue: #0065fc;
  --light-blue: #deebff;
  --gray: #f2f2f2;
  --white: #ffffff;
  --black: #000000;
}

.fas::before {
  padding-left: 1px;
}

body {
  margin: 0;
  font-family: Raleway;
}

#logo {
  margin-left: 20px;
}
#logoSearchBar {
  width: 20px;
  height: 20px;
}

.title {
  font-size: 18px;
  font-weight: bold;
  margin-left: 20px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}
.subtitle {
  display: flex;
  font-size: 14px;
  top: 90px;
  font-family: Verdana, Geneva, Tahoma, sans-serif;
  font-size: 11px;
  padding-bottom: 15px;
  margin-left: 20px;
}

.menu {
  display: flex;
  font-size: 14px;
}

.header {
  display: flex;
  justify-content: space-between;
  padding: 0 20px;
}

.barreDeRecherche {
  display: flex;
  margin-left: 20px;
}
.searchBar {
  all: unset;
  height: 42px;
  width: 180px;
  border-radius: 0;
  border-color: var(--gray);
  border-style: solid;
  padding-left: 20px;
}
.imgSearchBar {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 48px;
  width: 45px;
  border-radius: 15px 0px 0px 15px;
  background: var(--gray);
}
.Rechercher {
  height: 47px;
  width: 100px;
  margin-right: 70px;
  background: var(--blue);
  border-style: none;
  color: var(--white);
  cursor: pointer;
  border-radius: 0px 15px 15px 0px;
  font-weight: bold;
}
.filtres {
  display: flex;
  font-weight: bold;
}

.minibox {
  display: flex;
  position: relative;
  justify-content: flex-start;
  padding-right: 10px;
  margin: 0 10px;
  align-items: center;
  margin-top: 22px;
  height: 35px;
  border: 2px solid var(--gray);
  border-radius: 40px;
  cursor: pointer;
  padding-left: 48px;
}
.iconFiltres {
  display: flex;
  position: absolute;
  left: -2px;
  width: 38px;
  height: 38px;
  border-radius: 50%;
  background-color: var(--light-blue);
  justify-content: center;
  align-items: center;
  margin-right: 10px;
}
.fas {
  color: var(--blue);
}

.box {
  all: unset;
  height: 80px;
  padding: 0 25px;
  display: flex;
  align-items: center;
  position: relative;
  cursor: pointer;
}

.box:hover {
  color: var(--blue);
}

.minibox:hover {
  color: var(--blue);
}
.box:focus {
  border-top: 2px solid var(--blue);
}

.infoSearch {
  display: flex;
  align-items: center;
  padding-left: 20px;
}
.infoLogement {
  padding-left: 10px;
}
.icon {
  display: flex;
  border-radius: 50%;
  width: 21px;
  height: 1px;
  padding: 10px 0px;
  border-color: var(--gray);
  align-items: center;
  justify-content: center;
  border-style: solid;
}

.fa-info {
  color: var(--blue);
  font-size: 10px;
  justify-content: center;
  align-items: center;
}

::placeholder {
  color: var(--black);
  font-weight: bold;
  font-size: 15px;
}
.rectangle {
  border-radius: 20px;
  background-color: var(--gray);
  padding: 30px 25px;
  margin: 20px 15px;
}
.parent {
  display: flex;
  flex-wrap: wrap;
}
.miniRectangle {
  display: flex;
  justify-content: center;
  flex-direction: column;

  height: 150px;
  width: 200px;
  margin: 20px;

  background: var(--white);
  border-radius: 20px;
  border: 4px solid white;
  overflow: hidden;
}
.imgRectangle {
  display: flex;
  justify-content: flex-start;
  flex-direction: column;
  flex-wrap: wrap;
  font-size: 14px;
  font-weight: bold;
}

.imgMiniRectangle {
  width: 100%;
  height: 60%;
}

.card-content {
  width: 100%;
  height: 40%;
  padding: 10px;
}

.card-title {
  font-weight: bold;
  font-size: 14px;
}

.AfficherPlus {
  font-weight: bold;
  margin-left: 20px;
  margin-top: 20px;
}
.parentLongRectangle {
  display: flex;
  flex-wrap: wrap;
  flex-direction: column;
}
.longRectangle {
  display: flex;
  height: 110px;
  width: 300px;
  background: var(--white);
  border-radius: 20px;
  margin: 20px;
  font-size: 14px;
  font-weight: bold;
}

.parentImgLong {
  display: flex;
}

#imgLongRectangle {
  display: flex;
  width: 110px;
  height: 110px;
  border-radius: 15px 0px 0px 15px;
}

.rectangle > .title {
  margin-left: 20px;
}

.flex {
  display: flex;
}

.master {
  padding: 15px;
}
.Activites {
  padding: 30px 15px 15px 15px;
}
.parentActivites {
  padding: 15px 15px 40px 15px;
  min-height: 500px;
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  grid-template-rows: 1fr 1fr;
  gap: 40px;
  grid-template-areas:
    "VieuxPort FortdePomegue ParcNationaldesCalanques Notre-Dame-de-la-Grade"
    "VieuxPort IlesduFrioul ParcNationaldesCalanques ParcLongchamp";
}
.parentActivites > * {
  width: 100%;
  height: 100%;
  border-radius: 20px;
  background-color: var(--gray);
}

.VieuxPort {
  grid-area: VieuxPort;
}
.FortdePomegue {
  grid-area: FortdePomegue;
}
.IlesduFrioul {
  grid-area: IlesduFrioul;
}
.ParcNationaldesCalanques {
  grid-area: ParcNationaldesCalanques;
}
.Notre-Dame-de-la-Grade {
  grid-area: Notre-Dame-de-la-Grade;
}
.ParcLongchamp {
  grid-area: ParcLongchamp;
}
.parentImgActivite {
  display: flex;
}
#imgActivites {
  display: flex;
  width: 100px;
  height: 100px;
}

#footer {
  display: flex;
  justify-content: space-around;
  height: 150px;
  width: 100%;
  font-size: 12px;
  background-color: var(--gray);
  flex-wrap: wrap;
  padding-top: 20px;
}
  

